--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage
 # command to run tests
 script:
-  - pytest
+  - coverage run -m pytest
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
